Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/T4704365.out
T4704365.java:16:14: compiler.err.var.might.not.have.been.initialized: i
1 error
